--- a/style.css
+++ b/style.css
@@ -1,10 +1,26 @@
 body{
-    height: 95vh;
+    height: 90vh;
     width: 95vw;
     display: flex;
     flex-direction: column;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     justify-content: center;
     align-items: center;
-    background-color:white;
-    color: rgb(52, 165, 52);
+    background-color:#477429;
+    color: #A1CF48;
+}
+
+body > h1{
+    margin-top: 0;
+    margin-bottom: 5px;
+    padding: 0;
+}
+
+footer {
+    height: 2vh;
+    width: 95vw;
+    color: white;
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
